 * vi: various bugfixes
 * doc: documented min, max, within

2015-11-12: v1.4.4

 * forth: added u. unloop leave cell+ cells page key?
 * forth: allow input of negative numbers
 * forth: optimized cmove, cmove>
 * forth: made . print signed numbers
 * forth: various bugfixes
 * doc: simplified & improved intro + tutorial
 * vi: bugfix, exiting editor disabled key repeat

Thanks to Christian Johansson and polluks for bug reports!

2015-12-23: v1.4.5

 * forth: / now uses floored signed division
 * forth: bugfix for negative number parsing (2- was 
   interpreted as -20)
 * forth: made 2/ sign-extend negative numbers
 * forth: added spaces source >in 2over 2swap m+ m*
   sm/rem fm/mod dabs dnegate s>d
 * forth: changed word order of double-cell integers
 * vi: backspace on start of line now doesn't join lines
 * doc: mention in tutorial that default is hexadecimal

Thanks to Christian Johansson and polluks for suggestions!

2015-12-30: v1.4.6

 * bugfix: disabled tail call elimination for literal ['] [char]
           to avoid some crashes
 * bugfix: <, rshift, u. did not support negative numbers
 * forth: made word finding + numbers case insensitive
 * forth: renamed char to getc, and added a new char that works
          according to the Forth 2012 standard.
 * forth: added abort, abort", 2@, 2!, char+, chars, align, aligned
 * forth: key, key? now work only with keyboard
 * forth: made quit reset input and fall back to keyboard
 * forth: fill ( ch addr len ) changed to fill ( addr len ch )
 * forth: allot ( -- n ) changed to allot ( -- )
 * forth: made base a variable instead of a value
 * forth: changed variable; data field is now after code field

Thanks to Christian Johansson for suggestions!

?-?-?: v1.4.7

 * forth: made "type" disable c64 quote mode (fixes "words")
 * forth: removed hide, hide-to, hidden, forget
 * forth: state ( -- flag ) changed to state ( -- addr )
 * forth: added count
 * forth: made while/repeat implementation conform to standard