@@ -234,6 +234,7 @@ Thanks to Christian Johansson for suggestions!
 
 ?-?-?: v1.4.7
 
+ * forth: made +loop work according to standard
  * forth: made "type" disable c64 quote mode (fixes "words")
  * forth: removed hide, hide-to, hidden, forget
  * forth: state ( -- flag ) changed to state ( -- addr )
